Menambah feature pada index.html

--- a/index.html
+++ b/index.html
@@ -8,5 +8,18 @@
   </head>
   <body>
     <p>Testing Git</p>
+
+    <input type="text" id="input1" />
+    <span>+</span>
+    <input type="text" id="input2" />
+
+    <button
+      type="button"
+      onclick="addition(document.getElementById('input1'), document.getElementById('input2'))"
+    >
+      Print Result
+    </button>
+
+    <script src="script.js"></script>
   </body>
 </html>
