Adding a feature on index.html

--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
   <body>
     <p>Testing Git</p>
 
-    <input type="text" id="input1" />
+    <input type="number" id="input1" />
     <span>+</span>
-    <input type="text" id="input2" />
+    <input type="numbers" id="input2" />
 
     <button
       type="button"
-      onclick="addition(document.getElementById('input1'), document.getElementById('input2'))"
+      onclick="addition(Number(document.getElementById('input1').value), Number(document.getElementById('input2').value))"
     >
       Print Result
     </button>
